[gd_scene load_steps=10 format=3 uid="uid://c4yryo7pvhbuy"]

[ext_resource type="Script" path="res://scripts/GUI/menus/main_menu.gd" id="1_kvkg4"]
[ext_resource type="Texture2D" uid="uid://bgwqq515ybq8e" path="res://sprites/GUI/Play.png" id="2_yfckd"]
[ext_resource type="Texture2D" uid="uid://bnvrpo3p8qdhy" path="res://sprites/GUI/playpressed.png" id="3_78qe2"]
[ext_resource type="Texture2D" uid="uid://dupuptkr6dfc0" path="res://sprites/GUI/credits.png" id="4_2efbp"]
[ext_resource type="Texture2D" uid="uid://ce1xxk4bo51ts" path="res://sprites/GUI/quit.png" id="5_f8kof"]
[ext_resource type="AudioStream" uid="uid://5s5ctkskxmnq" path="res://sounds/sfx/slash.ogg" id="6_7hwbg"]
[ext_resource type="PackedScene" uid="uid://dw8ojbnh16lk4" path="res://scenes/ground_tiles.tscn" id="6_ufea3"]
[ext_resource type="Texture2D" uid="uid://dtev2q5avpadb" path="res://sprites/Entities/Player/player.png" id="7_a6v6t"]
[ext_resource type="FontFile" uid="uid://cnx4pqerxaf4" path="res://sprites/GUI/CooperBits.ttf" id="12_8amj3"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_kvkg4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = -48.0
offset_top = -16.0
offset_right = 1318.0
offset_bottom = 742.0

[node name="TextureButton2" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 150.0
offset_top = 550.0
offset_right = 463.0
offset_bottom = 754.0
texture_normal = ExtResource("5_f8kof")
texture_pressed = ExtResource("3_78qe2")
ignore_texture_size = true
stretch_mode = 6

[node name="TextureButton3" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 157.0
offset_top = 355.0
offset_right = 451.0
offset_bottom = 567.0
texture_normal = ExtResource("4_2efbp")
texture_pressed = ExtResource("3_78qe2")
ignore_texture_size = true
stretch_mode = 6

[node name="TextureButton" type="TextureButton" parent="Control"]
layout_mode = 0
offset_left = 145.0
offset_top = 170.0
offset_right = 458.0
offset_bottom = 374.0
texture_normal = ExtResource("2_yfckd")
texture_pressed = ExtResource("3_78qe2")
ignore_texture_size = true
stretch_mode = 6

[node name="MusicVolume" type="HSlider" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -410.0
offset_top = -95.0
offset_right = -55.0
offset_bottom = -32.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
max_value = 1.5
step = 0.01
value = 0.7

[node name="Label" type="Label" parent="Control/MusicVolume"]
layout_mode = 0
offset_left = -133.0
offset_top = 22.0
offset_right = -12.0
offset_bottom = 41.0
text = "Music Volume"

[node name="SoundVolume" type="HSlider" parent="Control"]
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -411.0
offset_top = -140.0
offset_right = -56.0
offset_bottom = -77.0
grow_horizontal = 0
grow_vertical = 0
size_flags_horizontal = 8
size_flags_vertical = 8
max_value = 2.0
step = 0.01
value = 0.85

[node name="Label" type="Label" parent="Control/SoundVolume"]
layout_mode = 0
offset_left = -132.0
offset_top = 22.0
offset_right = -11.0
offset_bottom = 41.0
text = "Sound Volume"

[node name="TestSound" type="AudioStreamPlayer" parent="Control/SoundVolume"]
stream = ExtResource("6_7hwbg")
bus = &"Sounds"

[node name="GroundTiles" parent="." instance=ExtResource("6_ufea3")]
scale = Vector2(5, 5)
layer_0/tile_data = PackedInt32Array(786454, 65540, 1, 720918, 65540, 1, 655382, 65540, 1, 589846, 65540, 1, 524310, 65540, 1, 458774, 65540, 1, 393238, 65540, 1, 327702, 65540, 1, 262166, 65540, 1, 196630, 65540, 1, 131094, 65540, 1, 65558, 65540, 1, 22, 65540, 1, -65514, 65540, 1, -131050, 65540, 1, -196586, 65540, 1, 786453, 65540, 1, 720917, 65540, 1, 655381, 65540, 1, 589845, 65540, 1, 524309, 65540, 1, 458773, 65540, 1, 393237, 65540, 1, 327701, 65540, 1, 262165, 65540, 1, 196629, 65540, 1, 131093, 65540, 1, 65557, 65540, 1, 21, 65540, 1, -65515, 65540, 1, -131051, 65540, 1, -196587, 65540, 1, 786452, 65540, 1, 720916, 65540, 1, 655380, 65540, 1, 589844, 65540, 1, 524308, 65540, 1, 458772, 65540, 1, 393236, 65540, 1, 327700, 262145, 2, 262164, 262145, 1, 196628, 65540, 1, 131092, 65540, 1, 65556, 65540, 1, 20, 65540, 1, -65516, 65540, 1, -131052, 65540, 1, -196588, 65540, 1, 786451, 65540, 1, 720915, 65540, 1, 655379, 65540, 1, 589843, 65540, 1, 524307, 65540, 1, 458771, 65540, 1, 393235, 65540, 1, 327699, 65537, 1, 262163, 65537, 3, 196627, 65540, 1, 131091, 65540, 1, 65555, 65540, 1, 19, 65540, 1, -65517, 65540, 1, -131053, 65540, 1, -196589, 65540, 1, 786450, 65540, 1, 720914, 65540, 1, 655378, 65540, 1, 589842, 65540, 1, 524306, 65540, 1, 458770, 65540, 1, 393234, 65540, 1, 327698, 65537, 1, 262162, 65537, 3, 196626, 65540, 1, 131090, 65540, 1, 65554, 65540, 1, 18, 65540, 1, -65518, 65540, 1, -131054, 65540, 1, -196590, 65540, 1, 786449, 65540, 1, 720913, 65540, 1, 655377, 65540, 1, 589841, 65540, 1, 524305, 65540, 1, 458769, 65540, 1, 393233, 65540, 1, 327697, 65537, 1, 262161, 65537, 3, 196625, 65540, 1, 131089, 65540, 1, 65553, 65540, 1, 17, 65540, 1, -65519, 65540, 1, -131055, 65540, 1, -196591, 65540, 1, 786448, 65540, 1, 720912, 65540, 1, 655376, 65540, 1, 589840, 262145, 2, 524304, 1, 2, 458768, 1, 2, 393232, 1, 2, 327696, 327681, 1, 262160, 327681, 2, 196624, 1, 2, 131088, 1, 2, 65552, 1, 2, 16, 262145, 1, -65520, 65540, 1, -131056, 65540, 1, -196592, 65540, 1, 786447, 65540, 1, 720911, 65540, 1, 655375, 65540, 1, 589839, 196609, 2, 524303, 131073, 2, 458767, 131073, 2, 393231, 131073, 2, 327695, 393217, 1, 262159, 393217, 2, 196623, 131073, 2, 131087, 131073, 2, 65551, 131073, 2, 15, 196609, 1, -65521, 65540, 1, -131057, 65540, 1, -196593, 65540, 1, 786446, 65540, 1, 720910, 65540, 1, 655374, 65540, 1, 589838, 65540, 1, 524302, 65540, 1, 458766, 65540, 1, 393230, 65540, 1, 327694, 65537, 1, 262158, 65537, 3, 196622, 65540, 1, 131086, 65540, 1, 65550, 65540, 1, 14, 65540, 1, -65522, 65540, 1, -131058, 65540, 1, -196594, 65540, 1, 786445, 65540, 1, 720909, 65540, 1, 655373, 65540, 1, 589837, 65540, 1, 524301, 65540, 1, 458765, 65540, 1, 393229, 65540, 1, 327693, 65537, 1, 262157, 65537, 3, 196621, 65540, 1, 131085, 65540, 1, 65549, 65540, 1, 13, 65540, 1, -65523, 65540, 1, -131059, 65540, 1, -196595, 65540, 1, 786444, 65540, 1, 720908, 65540, 1, 655372, 65540, 1, 589836, 65540, 1, 524300, 65540, 1, 458764, 65540, 1, 393228, 65540, 1, 327692, 65537, 1, 262156, 65537, 3, 196620, 65540, 1, 131084, 65540, 1, 65548, 65540, 1, 12, 65540, 1, -65524, 65540, 1, -131060, 65540, 1, -196596, 65540, 1, 786443, 65540, 1, 720907, 65540, 1, 655371, 65540, 1, 589835, 65540, 1, 524299, 65540, 1, 458763, 65540, 1, 393227, 65540, 1, 327691, 196609, 2, 262155, 196609, 1, 196619, 65540, 1, 131083, 65540, 1, 65547, 65540, 1, 11, 65540, 1, -65525, 65540, 1, -131061, 65540, 1, -196597, 65540, 1, 786442, 65540, 1, 720906, 65540, 1, 655370, 65540, 1, 589834, 65540, 1, 524298, 65540, 1, 458762, 65540, 1, 393226, 65540, 1, 327690, 65540, 1, 262154, 65540, 1, 196618, 65540, 1, 131082, 65540, 1, 65546, 65540, 1, 10, 65540, 1, -65526, 65540, 1, -131062, 65540, 1, -196598, 65540, 1, 786441, 65540, 1, 720905, 65540, 1, 655369, 65540, 1, 589833, 65540, 1, 524297, 65540, 1, 458761, 65540, 1, 393225, 65540, 1, 327689, 65540, 1, 262153, 65540, 1, 196617, 65540, 1, 131081, 65540, 1, 65545, 65540, 1, 9, 65540, 1, -65527, 65540, 1, -131063, 65540, 1, -196599, 65540, 1, 786440, 65540, 1, 720904, 65540, 1, 655368, 65540, 1, 589832, 65540, 1, 524296, 65540, 1, 458760, 65540, 1, 393224, 65540, 1, 327688, 65540, 1, 262152, 65540, 1, 196616, 65540, 1, 131080, 65540, 1, 65544, 65540, 1, 8, 65540, 1, -65528, 65540, 1, -131064, 65540, 1, -196600, 65540, 1, 786439, 65540, 1, 720903, 65540, 1, 655367, 65540, 1, 589831, 65540, 1, 524295, 65540, 1, 458759, 65540, 1, 393223, 65540, 1, 327687, 65540, 1, 262151, 65540, 1, 196615, 65540, 1, 131079, 65540, 1, 65543, 65540, 1, 7, 65540, 1, -65529, 65540, 1, -131065, 65540, 1, -196601, 65540, 1, 786438, 65540, 1, 720902, 65540, 1, 655366, 65540, 1, 589830, 65540, 1, 524294, 65540, 1, 458758, 65540, 1, 393222, 65540, 1, 327686, 65540, 1, 262150, 65540, 1, 196614, 65540, 1, 131078, 65540, 1, 65542, 65540, 1, 6, 65540, 1, -65530, 65540, 1, -131066, 65540, 1, -196602, 65540, 1, 786437, 65540, 1, 720901, 65540, 1, 655365, 65540, 1, 589829, 65540, 1, 524293, 65540, 1, 458757, 65540, 1, 393221, 65540, 1, 327685, 65540, 1, 262149, 65540, 1, 196613, 65540, 1, 131077, 65540, 1, 65541, 65540, 1, 5, 65540, 1, -65531, 65540, 1, -131067, 65540, 1, -196603, 65540, 1, 786436, 65540, 1, 720900, 65540, 1, 655364, 65540, 1, 589828, 65540, 1, 524292, 65540, 1, 458756, 65540, 1, 393220, 65540, 1, 327684, 65540, 1, 262148, 65540, 1, 196612, 65540, 1, 131076, 65540, 1, 65540, 65540, 1, 4, 65540, 1, -65532, 65540, 1, -131068, 65540, 1, -196604, 65540, 1, 786435, 65540, 1, 720899, 65540, 1, 655363, 65540, 1, 589827, 65540, 1, 524291, 65540, 1, 458755, 65540, 1, 393219, 65540, 1, 327683, 65540, 1, 262147, 65540, 1, 196611, 65540, 1, 131075, 65540, 1, 65539, 65540, 1, 3, 65540, 1, -65533, 65540, 1, -131069, 65540, 1, -196605, 65540, 1, 786434, 65540, 1, 720898, 65540, 1, 655362, 65540, 1, 589826, 65540, 1, 524290, 65540, 1, 458754, 65540, 1, 393218, 65540, 1, 327682, 65540, 1, 262146, 65540, 1, 196610, 65540, 1, 131074, 65540, 1, 65538, 65540, 1, 2, 65540, 1, -65534, 65540, 1, -131070, 65540, 1, -196606, 65540, 1, 786433, 65540, 1, 720897, 65540, 1, 655361, 65540, 1, 589825, 65540, 1, 524289, 65540, 1, 458753, 65540, 1, 393217, 65540, 1, 327681, 65540, 1, 262145, 65540, 1, 196609, 65540, 1, 131073, 65540, 1, 65537, 65540, 1, 1, 65540, 1, -65535, 65540, 1, -131071, 65540, 1, -196607, 65540, 1, 786432, 65540, 1, 720896, 65540, 1, 655360, 65540, 1, 589824, 65540, 1, 524288, 65540, 1, 458752, 65540, 1, 393216, 65540, 1, 327680, 65540, 1, 262144, 65540, 1, 196608, 65540, 1, 131072, 65540, 1, 65536, 65540, 1, 0, 65540, 1, -65536, 65540, 1, -131072, 65540, 1, -196608, 65540, 1, 851967, 65540, 1, 786431, 65540, 1, 720895, 65540, 1, 655359, 65540, 1, 589823, 65540, 1, 524287, 65540, 1, 458751, 65540, 1, 393215, 65540, 1, 327679, 65540, 1, 262143, 65540, 1, 196607, 65540, 1, 131071, 65540, 1, 65535, 65540, 1, -1, 65540, 1, -65537, 65540, 1, -131073, 65540, 1, 851966, 65540, 1, 786430, 65540, 1, 720894, 65540, 1, 655358, 65540, 1, 589822, 65540, 1, 524286, 65540, 1, 458750, 65540, 1, 393214, 65540, 1, 327678, 65540, 1, 262142, 65540, 1, 196606, 65540, 1, 131070, 65540, 1, 65534, 65540, 1, -2, 65540, 1, -65538, 65540, 1, -131074, 65540, 1, 851965, 65540, 1, 786429, 65540, 1, 720893, 65540, 1, 655357, 65540, 1, 589821, 65540, 1, 524285, 65540, 1, 458749, 65540, 1, 393213, 65540, 1, 327677, 65540, 1, 262141, 65540, 1, 196605, 65540, 1, 131069, 65540, 1, 65533, 65540, 1, -3, 65540, 1, -65539, 65540, 1, -131075, 65540, 1, 851964, 65540, 1, 786428, 65540, 1, 720892, 65540, 1, 655356, 65540, 1, 589820, 65540, 1, 524284, 65540, 1, 458748, 65540, 1, 393212, 65540, 1, 327676, 65540, 1, 262140, 65540, 1, 196604, 65540, 1, 131068, 65540, 1, 65532, 65540, 1, -4, 65540, 1, -65540, 65540, 1, -131076, 65540, 1, 851963, 65540, 1, 786427, 65540, 1, 720891, 65540, 1, 655355, 65540, 1, 589819, 65540, 1, 524283, 65540, 1, 458747, 65540, 1, 393211, 65540, 1, 327675, 65540, 1, 262139, 65540, 1, 196603, 65540, 1, 131067, 65540, 1, 65531, 65540, 1, -5, 65540, 1, -65541, 65540, 1, -131077, 65540, 1)
layer_1/tile_data = PackedInt32Array()
layer_2/tile_data = PackedInt32Array(393227, 65540, 7, 393228, 65540, 7, 393229, 65540, 7, 393230, 65540, 7, 458763, 65540, 7, 524299, 65540, 7, 589835, 65540, 0, 589836, 65540, 0, 589837, 65540, 8, 589838, 65540, 0, 524302, 65540, 7, 458766, 65540, 7, 458765, 65540, 7, 458764, 65540, 7, 524300, 65540, 7, 524301, 65540, 7, 393233, 65540, 7, 458769, 65540, 7, 524305, 65540, 7, 589841, 4, 0, 589842, 65540, 8, 589843, 65540, 0, 524307, 65540, 7, 524308, 65540, 7, 458772, 65540, 7, 393236, 65540, 7, 393235, 65540, 7, 393234, 65540, 7, 458770, 65540, 7, 524306, 65540, 7, 458771, 65540, 7, 589844, 65540, 0, 131089, 65540, 7, 65553, 65540, 7, 19, 65540, 7, 20, 65540, 7, 65556, 65540, 7, 131092, 65540, 7, 196628, 65540, 7, 196627, 65540, 7, 196626, 65540, 7, 14, 65540, 7, 11, 65540, 7, 65548, 65540, 7, 589834, 4, 8, 524298, 4, 7, 458762, 131076, 0, 393226, 65540, 7, 327690, 65540, 7, 262154, 65540, 7, 196618, 65540, 7, 65546, 131076, 2, 10, 131076, 1, -65526, 131076, 0, -65525, 65540, 6, -65524, 65540, 6, -65523, 65540, 6, -65522, 65540, 6, -65521, 65540, 6, -65518, 65540, 6, -65517, 65540, 6, -65516, 65540, 6, -65515, 131076, 6, 21, 131076, 7, 65557, 4, 1, 65552, 65540, 7, 131088, 65540, 7, 589845, 131076, 8, 524309, 131076, 7, 458773, 4, 1, 393237, 131076, 7, 327701, 4, 1, 262165, 131076, 7, 196629, 131076, 7, 131093, 131076, 7, 327700, 65540, 7, 262164, 65540, 7, 327699, 65540, 7, 262163, 65540, 7, 327698, 65540, 7, 262162, 65540, 7, 327697, 65540, 7, 262161, 65540, 7, 589840, 131076, 0, 524304, 65540, 7, 458768, 65540, 7, 393232, 65540, 7, 327696, 65540, 7, 262160, 65540, 7, 589839, 65540, 8, 524303, 65540, 7, 458767, 65540, 7, 393231, 65540, 7, 327695, 65540, 7, 262159, 65540, 7, 327694, 65540, 7, 262158, 65540, 7, 327693, 65540, 7, 262157, 65540, 7, 327692, 65540, 7, 262156, 65540, 7, 327691, 65540, 7, 262155, 65540, 7, 65545, 65540, 6, 65544, 65540, 6, 131080, 65540, 7, 131079, 131076, 1, 196615, 65540, 7, 196614, 4, 6, 262150, 131076, 1, 327686, 4, 7, 393222, 4, 8, 393223, 131076, 0, 458759, 4, 8, 458760, 65540, 0, 458761, 65540, 8, 327689, 65540, 7, 327688, 65540, 7, 327687, 65540, 7, 262151, 65540, 7, 196616, 65540, 7, 65543, 4, 6, 393224, 65540, 7, 393225, 65540, 7, 262153, 65540, 7, 196617, 65540, 7, 262152, 65540, 7, 131081, 65540, 7, 655376, 131076, 1, 720912, 4, 8, 720913, 131076, 8, 655377, 4, 1, -65527, 65540, 8, -65528, 65540, 8, -65529, 65540, 0, -65530, 65540, 8, -65531, 65540, 0, -65532, 4, 8, -131068, 4, 6, -131067, 65540, 6, -131066, 65540, 6, -131065, 65540, 6, -131064, 65540, 6, -131063, 65540, 6, -131062, 131076, 6, 589832, 131076, 6, 655368, 131076, 8, 655367, 4, 0, 655366, 4, 8, 589831, 65540, 6, 589830, 4, 6, 720903, 131076, 8, 65547, 65540, 7, 65551, 65540, 7, 131087, 65540, 7, 65550, 65540, 7, 131086, 65540, 7, 131085, 65540, 7, 131084, 65540, 7, 131083, 65540, 7, 131082, 65540, 7, 12, 65540, 7, 13, 65540, 7, 65549, 65540, 7, -65520, 65540, 6, 15, 65540, 7, -65519, 65540, 6, 18, 65540, 7, 65554, 65540, 7, 196619, 65540, 7, 196620, 65540, 7, 196621, 65540, 7, 196622, 65540, 7, 196623, 65540, 7, 196624, 65540, 7, 196625, 65540, 7, 131091, 65540, 7, 65555, 65540, 7, 131090, 65540, 7, 17, 65540, 7, 16, 65540, 7)
layer_3/tile_data = PackedInt32Array(262153, 196609, 2, 196617, 131073, 2, 196618, 524289, 3, 262154, 393217, 1, 196619, 327681, 1, 196620, 65537, 1, 196621, 65537, 1, 131084, 65537, 3, 131083, 65537, 3, 131082, 65537, 3, 196622, 262145, 2, 131086, 327681, 1, 131085, 65537, 3, 65550, 131073, 2, 65551, 327681, 1, 65552, 65537, 1, 65553, 393217, 1, 131089, 131073, 2, 131090, 327681, 1, 65554, 524289, 3, 18, 65537, 3, 16, 65537, 3, 17, 65537, 3, 15, 65537, 3, 14, 196609, 1, 131087, 262145, 2, 131091, 65537, 1, 131092, 262145, 2, 65556, 1, 2, 20, 262145, 1, 19, 65537, 3, 65555, 524289, 3, 196626, 1, 2, 262162, 1, 2, 262161, 393217, 2, 327697, 327681, 1, 393233, 1, 2, 458769, 1, 2, 458768, 393217, 1, 524304, 196609, 2, 393232, 393217, 2, 327696, 131073, 2, 196625, 131073, 2, 327698, 262145, 2, 262160, 196609, 1, 524305, 262145, 2, 131081, 196609, 1, 327690, 131073, 2, 327691, 327681, 2, 393227, 65537, 1, 393228, 393217, 1, 393229, 327681, 2, 393230, 65537, 3, 458766, 65537, 1, 458767, 65537, 1, 393231, 65537, 3, 327692, 65537, 3, 262155, 1, 2, 393226, 196609, 2, 458764, 196609, 2, 458765, 65537, 1, 327693, 262145, 1, 458772, 655361, 2, 262164, 720897, 2, 196624, 589825, 2, 262157, 720897, 2, 458758, 786433, 5, 458760, 917505, 5, 524294, 786433, 5, 524295, 851969, 5, 524296, 917505, 5, 458759, 851969, 5, 393222, 786433, 5, 393223, 851969, 5, 393224, 917505, 5, 327686, 786433, 5, 327687, 851969, 5, 327688, 917505, 5, 262150, 786433, 4, 262152, 917505, 4)

[node name="PlayerSprite" type="Sprite2D" parent="."]
position = Vector2(758, 263)
scale = Vector2(5.32938, 5.32938)
texture = ExtResource("7_a6v6t")
hframes = 16
vframes = 14
frame = 48

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
offset_left = 18.0
offset_top = 28.0
offset_right = 773.0
offset_bottom = 208.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_fonts/normal_font = ExtResource("12_8amj3")
theme_override_font_sizes/normal_font_size = 188
text = "Rumbo"
scroll_active = false

[node name="RichTextLabel" type="RichTextLabel" parent="."]
offset_left = 28.0
offset_top = 27.0
offset_right = 747.0
offset_bottom = 175.0
theme_override_colors/default_color = Color(0.85098, 0.627451, 0.4, 1)
theme_override_fonts/normal_font = ExtResource("12_8amj3")
theme_override_font_sizes/normal_font_size = 182
text = "Rumbo"
scroll_active = false

[connection signal="button_down" from="Control/TextureButton2" to="." method="_on_texture_button_2_button_down"]
[connection signal="button_down" from="Control/TextureButton3" to="." method="_on_texture_button_3_button_down"]
[connection signal="button_down" from="Control/TextureButton" to="." method="_on_texture_button_button_down"]
[connection signal="value_changed" from="Control/MusicVolume" to="." method="_on_music_volume_value_changed"]
[connection signal="value_changed" from="Control/SoundVolume" to="." method="_on_sound_volume_value_changed"]
